--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
+    <script src="./index.js"></script>
 </body>
 </html>
